--- a/public/words.html
+++ b/public/words.html
@@ -86,7 +86,82 @@
       { hebrew: "אבא", english: "Father" },
       { hebrew: "אמא", english: "Mother" },
       { hebrew: "תפוח", english: "Apple" },
-      { hebrew: "ספר", english: "Book" }
+      { hebrew: "ספר", english: "Book" },
+      { hebrew: "חתול", english: "Cat" },
+      { hebrew: "כלב", english: "Dog" },
+      { hebrew: "מים", english: "Water" },
+      { hebrew: "שמש", english: "Sun" },
+      { hebrew: "ירח", english: "Moon" },
+      { hebrew: "כוכב", english: "Star" },
+      { hebrew: "בית", english: "House" },
+      { hebrew: "כיסא", english: "Chair" },
+      { hebrew: "שולחן", english: "Table" },
+      { hebrew: "מחשב", english: "Computer" },
+      { hebrew: "טלפון", english: "Phone" },
+      { hebrew: "תמונה", english: "Picture" },
+      { hebrew: "דלת", english: "Door" },
+      { hebrew: "חלון", english: "Window" },
+      { hebrew: "אור", english: "Light" },
+      { hebrew: "צבע", english: "Color" },
+      { hebrew: "מכונית", english: "Car" },
+      { hebrew: "מטוס", english: "Airplane" },
+      { hebrew: "אופניים", english: "Bicycle" },
+      { hebrew: "גשר", english: "Bridge" },
+      { hebrew: "כביש", english: "Road" },
+      { hebrew: "גינה", english: "Garden" },
+      { hebrew: "פרח", english: "Flower" },
+      { hebrew: "עץ", english: "Tree" },
+      { hebrew: "שדה", english: "Field" },
+      { hebrew: "ילד", english: "Boy" },
+      { hebrew: "ילדה", english: "Girl" },
+      { hebrew: "חבר", english: "Friend" },
+      { hebrew: "אח", english: "Brother" },
+      { hebrew: "אחות", english: "Sister" },
+      { hebrew: "שעון", english: "Clock" },
+      { hebrew: "מנורה", english: "Lamp" },
+      { hebrew: "מים", english: "Water" },
+      { hebrew: "אש", english: "Fire" },
+      { hebrew: "ענן", english: "Cloud" },
+      { hebrew: "גשם", english: "Rain" },
+      { hebrew: "שלג", english: "Snow" },
+      { hebrew: "רוח", english: "Wind" },
+      { hebrew: "חול", english: "Sand" },
+      { hebrew: "דשא", english: "Grass" },
+      { hebrew: "חוף", english: "Beach" },
+      { hebrew: "יער", english: "Forest" },
+      { hebrew: "הר", english: "Mountain" },
+      { hebrew: "ים", english: "Sea" },
+      { hebrew: "בריכה", english: "Pool" },
+      { hebrew: "כדור", english: "Ball" },
+      { hebrew: "מגרש", english: "Field" },
+      { hebrew: "ספריה", english: "Library" },
+      { hebrew: "חנות", english: "Shop" },
+      { hebrew: "מוזיאון", english: "Museum" },
+      { hebrew: "גן", english: "Park" },
+      { hebrew: "תאורה", english: "Lighting" },
+      { hebrew: "פנס", english: "Lantern" },
+      { hebrew: "כפית", english: "Spoon" },
+      { hebrew: "מזלג", english: "Fork" },
+      { hebrew: "סכין", english: "Knife" },
+      { hebrew: "צלחת", english: "Plate" },
+      { hebrew: "כוס", english: "Glass" },
+      { hebrew: "דף", english: "Page" },
+      { hebrew: "מפה", english: "Map" },
+      { hebrew: "שדה תעופה", english: "Airport" },
+      { hebrew: "שמשייה", english: "Umbrella" },
+      { hebrew: "חוף ים", english: "Seashore" },
+      { hebrew: "מיטה", english: "Bed" },
+      { hebrew: "כרית", english: "Pillow" },
+      { hebrew: "מזרן", english: "Mattress" },
+      { hebrew: "מראה", english: "Mirror" },
+      { hebrew: "תקרה", english: "Ceiling" },
+      { hebrew: "רצפה", english: "Floor" },
+      { hebrew: "מעלית", english: "Elevator" },
+      { hebrew: "מדרגות", english: "Stairs" },
+      { hebrew: "חנייה", english: "Parking" },
+      { hebrew: "מכונה", english: "Machine" },
+      { hebrew: "מדפסת", english: "Printer" },
+      { hebrew: "מקרר", english: "Refrigerator" }
     ];
 
     const fetchImage = async (query) => {
